// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo renders correctly With props 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-weight: 300;
  color: #1c5796;
  font-size: 1.3rem;
  -webkit-letter-spacing: -1px;
  -moz-letter-spacing: -1px;
  -ms-letter-spacing: -1px;
  letter-spacing: -1px;
  display: none;
  visibility: hidden;
}

.c0 span {
  font-weight: 800;
  margin-left: 2px;
  color: #283646;
}

@media (min-width:600px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    visibility: visible;
  }
}

<a
  className="c0"
  desctoponly="true"
  href="/"
>
  Мебель 
  <span>
    Арт
  </span>
</a>
`;

exports[`Logo renders correctly Without props 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-weight: 300;
  color: #1c5796;
  font-size: 1.3rem;
  -webkit-letter-spacing: -1px;
  -moz-letter-spacing: -1px;
  -ms-letter-spacing: -1px;
  letter-spacing: -1px;
}

.c0 span {
  font-weight: 800;
  margin-left: 2px;
  color: #283646;
}

<a
  className="c0"
  href="/"
>
  Мебель 
  <span>
    Арт
  </span>
</a>
`;
